--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image:url(assets/backgroundimg2.jpeg) ;
+  background-image:url(assets2/backgroundimg2.jpeg) ;
 }
 
 header {
