--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -23,10 +23,18 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+buy-item button{
+  background-color: #b5e211;
+  color: white;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
     </style>
     <header>
-    <!-- navbar -->
+    navbar
   <div class="heading">
     <div class="item">
       <h2 class="ui header">
@@ -37,15 +45,227 @@ header {
   </div>
     </header>
   
-  <div id="mainContent">
-    <!-- Clothes Listing -->
-    <div id="clothesList">
-      <!-- Clothes items will be dynamically added here -->
-    </div>
-    <div id="accessoriesList">
-        <!-- Accessories items will be dynamically added here -->
-    </div>
-  </div>
+    <div class="ui centered grid">
+      <div class="four wide column">
+        <div class="list-container">
+          side menu for clothes
+          <ul class="ui divided list" id="clothes">
+            <li class ="clothes  and accessories">List of clothes and accessories will go here. </li>
+          </ul>
+        </div>
+        <!--banner-->
+        <!-- <div class="four wide column">
+        <img
+          id="images"
+          src="assets/placeholderImage.png"
+          alt="[CLOTHES AND ACCESSORIES]"/>
+      </div>
+
+      <div class="four wide column">
+          <div class="card">
+            <div id="name" class="name">[ ITEM NAME]</div>
+            <div class="content">
+              <div class="description">
+                <div id="description">[INSERT ITEM DESCRIPTION HERE]</div>
+                <span id="stock-left">[X]</span> stock left 
+              </div>
+            </div>
+            <div class="extra content">
+              <button id="buy-item" class="color red button">
+                Buy item
+              </button>
+
+
   <script src="script.js"></script>
 </body>
+</html>  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Code Challenge</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"
+    />
+    <link rel="stylesheet" href="assets2/index.css" />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  </head>
+  <body>
+
+
+
+
+
+
+
+    <!-- navbar -->
+    <div class="heading">
+      <div class="item">
+        <h2 class="ui header">
+          <i class="orange Cloth icon"></i>
+          <div class="content">STOP N THRIFT</div>
+          <div class="sub header" id="subtitle">BUY CLOTHES AND ACCESSORIES</div>
+        </h2>
+      </div>
+    </div>
+
+    <div class="ui centered grid">
+      <div class="four wide column">
+        <div class="list-container">
+          <!-- side menu -->
+          <ul class="ui divided list" id="clothes">
+            <li class ="Cloth item">. clothes will go here</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- poster -->
+      <div class="four wide column">
+        <img
+          id="poster"
+          src="assets2/placeholderImage.png"
+          alt="[CLOTH ITEMS]"
+        />
+      </div>
+
+      <!-- showing info -->
+      <div class="four wide column">
+        <div class="ui cards" id="showing">
+          <div class="card">
+            <div id="name" class="name">[CLOTH ITEM]</div>
+              <div class="description">
+                <div id="item-info">[INSERT ITEM DESCRIPTION HERE]</div>
+                 <div id="price" class="price">[INSERT ITEM PRICE</div>
+                 <div id="size"  class="size"> [INSERT ITEM SIZE</div>
+                 <span id="stock-left">[X]</span> stock left
+              </div>
+            </div>
+            <div class="extra content">
+              <button id="buy-item" class="ui orange button">
+                Buy item 
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="src/index.js"></script>
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
