--- a/index.html
+++ b/index.html
@@ -1,184 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stop N Thrift</title>
-  <link rel="stylesheet" href="assets/index.css"/>
-</head>
-<body>
-    <style>
-        body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-image:url(assets2/backgroundimg2.jpeg) ;
-}
-
-header {
-  background-color: #333;
-  color: white;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-buy-item button{
-  background-color: #b5e211;
-  color: white;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-    </style>
-    <header>
-    navbar
-  <div class="heading">
-    <div class="item">
-      <h2 class="ui header">
-        <div class="content">STOP N THRIFT</div>
-        <div class="sub header" id="subtitle">Buy Clothes and Accessories</div>
-      </h2>
-    </div>
-  </div>
-    </header>
-  
-    <div class="ui centered grid">
-      <div class="four wide column">
-        <div class="list-container">
-          side menu for clothes
-          <ul class="ui divided list" id="clothes">
-            <li class ="clothes  and accessories">List of clothes and accessories will go here. </li>
-          </ul>
-        </div>
-        <!--banner-->
-        <!-- <div class="four wide column">
-        <img
-          id="images"
-          src="assets/placeholderImage.png"
-          alt="[CLOTHES AND ACCESSORIES]"/>
-      </div>
-
-      <div class="four wide column">
-          <div class="card">
-            <div id="name" class="name">[ ITEM NAME]</div>
-            <div class="content">
-              <div class="description">
-                <div id="description">[INSERT ITEM DESCRIPTION HERE]</div>
-                <span id="stock-left">[X]</span> stock left 
-              </div>
-            </div>
-            <div class="extra content">
-              <button id="buy-item" class="color red button">
-                Buy item
-              </button>
-
-
-  <script src="script.js"></script>
-</body>
-</html>  -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <html>
   <head>
@@ -255,11 +74,11 @@ body {
                  <div id="size"  class="size"> [INSERT ITEM SIZE</div>
                  <span id="stock-left">[X]</span> stock left
               </div>
-            </div>
-            <div class="extra content">
-              <button id="buy-item" class="ui orange button">
+              <button id="buy-item" class="ui orange button" on click="showMessage('you have bought this item')">
                 Buy item 
               </button>
+            </div>
+        
             </div>
           </div>
         </div>
